# Robot

./: .gitignore  README.md
Code/MecanumWheel/: go.py  motor.py  xbox360.py
Code/Pi_ROS/: ReadMe.md  get_info.py  hc_sr04.py
Code/Pi_ROS/catkin_ws/src/Ultrasonic_wave/: CMakeLists.txt  package.xml
Code/Pi_ROS/catkin_ws/src/Ultrasonic_wave/msg/: Distance.msg
Code/Pi_ROS/catkin_ws/src/Ultrasonic_wave/scripts/: distance.py  go.py
Code/STM32_Car/: ReadMe.md
Hardware/5V变压模块/: 5V变压模块.PrjPcb  5V变压模块.PrjPcbStructure  5V变压模块.SchDoc  LM2596T.SchLib
Hardware/Connect_PCB/: Connect_PCB.PcbDoc  Connect_PCB.PrjPcb  Connect_PCB.PrjPcbStructure  Connect_PCB.SchDoc
Hardware/Lib/: Battery_Voltage.PcbLib  Battery_Voltage.SchLib  DC_XT.PcbLib  DC_XT.SchLib  MotorDriver.PcbLib  MotorDriver.SchLib  MotorInterface.PcbLib  MotorInterface.SchLib  STM32_Forest_S1.PcbLib  STM32_Forest_S1.SchLib  Self_Locking_Switch.PcbLib  Self_Locking_Switch.SchLib  USB_F.PcbLib  USB_F.SchLib  VCC24T5.PcbLib  VCC24T5.SchLib
Hardware/STM32最小系统/: ST32F103C8T6.SchLib  STM32最小系统.PrjPcb  STM32最小系统.SchDoc
Hardware/电压检测模块/: 电压检测模块.SchDoc
工程图/: 小车底盘.SLDPRT  小车底盘Pro.SLDDRW  小车底盘Pro.SLDPRT  小车组装.SLDASM  弧盖.SLDPRT  控制器安装盘.SLDDRW  控制器安装盘.SLDPRT  控制板托架STM32.SLDPRT  控制板托架树莓派.SLDPRT  电机压板.SLDPRT  电机安装架.SLDPRT  电机锁架.SLDPRT  电机驱动器侧挂箱_主体.SLDDRW  电机驱动器侧挂箱_主体.SLDPRT  电机驱动器侧挂箱_顶盖.SLDPRT  组装_安装板.SLDASM  组装_底盘.SLDASM  组装_总装.SLDASM  组装_车头超声波.SLDASM  超声波传感器安装板.SLDPRT  车头前盖.SLDPRT  车轮连接板.SLDPRT
程序代码/: motor.py  xbox360.py
论文/: 串口数据.txt  基于树莓派的安防巡逻机器人.docx  基于树莓派的服务类机器人.docx  毕业答辩演讲.pptx  毕业设计调研_曹沛文.docx  测试数据.xlsx
(+108 files in other folders)
