<?xml version="1.0"?>
<package format="2">
  <name>ultrasound_wave</name>
  <version>0.0.1</version>
  <description>The ultrasound_wave package</description>
  <license>TODO</license>

  <author email="peiwencao@vip.qq.com">Yours</author>
  <url type="website">https://www.yoursc.cn</url>
  <maintainer email="peiwencao@vip.qq.com">Yours</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
